--- a/README
+++ b/README
@@ -9,4 +9,4 @@ This repo includes the following components:
 To Run GUI use python2.
 You can also use this algorithm without GUI.
 
-Algo doesn't remove unused links. You can do it with your hands.
+Algo doesn't remove unused links. You can do it using your hands.
