--- a/README
+++ b/README
@@ -10,3 +10,5 @@ To Run GUI use python2.
 You can also use this algorithm without GUI.
 
 Algo doesn't remove unused links. You can do it using your hands.
+
+!!! Have undefined behavior witk "length" position in link. Be careful!
